--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=crudProgramacion
-spring.datasource.url=jdbc:postgresql://localhost:5432/<YOUR_DATABASE_NAME> 
-spring.datasource.username=<YOUR_USERNAME> 
-spring.datasource.password=<YOUR_PASSWORD> 
-spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none> 
+spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com/upgghpvz
+spring.datasource.username=upgghpvz
+spring.datasource.password=O2LBF0lLlccujShvwtRUUI6y0UrrPUeX 
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
