--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=crudProgramacion
-spring.datasource.url=jdbc:postgresql://isilo.db.elephantsql.com/upgghpvz
-spring.datasource.username=upgghpvz
-spring.datasource.password=O2LBF0lLlccujShvwtRUUI6y0UrrPUeX 
+spring.datasource.url=jdbc:postgresql://37.60.252.97:5432/db_danielsupelano
+spring.datasource.username=programacion_unac
+spring.datasource.password=unac_2024*_programacion
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
